--- a/src/Scenes/StartScreen/Intro/ImageFader.css
+++ b/src/Scenes/StartScreen/Intro/ImageFader.css
@@ -1,7 +1,7 @@
 .image-container {
   position: relative;
-  width: 1920px; /* Adjust as needed */
-  height: 1080px; /* Adjust as needed */
+  width: 1920px;
+  height: 1080px;
 }
 
 .image-container .fade {
