--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,10 @@
+@font-face {
+  font-family: "NayAug";
+  src: url("./GlobalAssets/font.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
+  font-family: "NayAug";
 }
